fix home screen alignment

--- a/src/screens/HomeScreen/HomeScreen.css
+++ b/src/screens/HomeScreen/HomeScreen.css
@@ -29,7 +29,6 @@
   max-width: 500px;
   padding-left: 50px;
   padding-right: 50px;
-  font-size: 25px;
 }
 
 .HeadingCoffee {
